# astrbot_plugin_setu

./: .gitignore  README.md  _conf_schema.json  main.py  metadata.yaml  pyproject.toml
setu/: __init__.py  api_client.py  config.py  image_cache.py  plugin.py  rate_limiter.py  session_manager.py  tools.py  trigger.py
tests/: __init__.py  conftest.py  test_api_client.py  test_config.py  test_image_cache.py  test_rate_limiter.py  test_session_manager.py  test_tools.py  test_trigger.py
