[project]
name = "astrbot-plugin-setu"
version = "1.0.0"
description = "基于 Lolicon API v2 的 AstrBot 色图插件"
requires-python = ">=3.12,<3.13"
dependencies = ["httpx>=0.27"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
